add broker id